<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".activities.ResetPasswordActivity">

    <!-- AdView to display ads-->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <!--<ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lock_bg"
            android:contentDescription="@string/todo" /-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/orange_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/msg_forgot_password"
            android:textColor="@color/orange_light"
            android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textColorHint="@color/status_bar_back">
        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_email_orange"
            android:drawableStart="@drawable/ic_email_orange"
            android:drawablePadding="@dimen/spacing_normal"
            android:textColor="@color/status_bar_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColorHint="@color/background_super_dark"
            app:fontFamily="@font/nunito_semibold"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
            tools:targetApi="o"
            android:importantForAutofill="no" />
    </android.support.design.widget.TextInputLayout>

    <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            app:fontFamily="@font/nunito_semibold"
            android:background="@drawable/round_corner_button_login"
            android:text="@string/btn_reset_password"
            android:textColor="@color/white_dim"
            android:onClick="resetPasswordButton"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_back"
            app:fontFamily="@font/nunito_semibold"
            android:background="@drawable/round_corner_button_with_stroke"
            android:textColor="@color/orange_light"
            android:onClick="goBackButton"/>

        <!-- AdView to display ads-->
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_id"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>