<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.UserSignInFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColorHint="@color/orange_light">
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/padding_normal"
                    android:textColor="@color/orange_light"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/orange_light"
                    android:fontFamily="@font/lato"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
                    android:importantForAutofill="no"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/email_container"
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColorHint="@color/orange_light"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/orange_light">
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_orange"
                    android:drawableLeft="@drawable/ic_lock_orange"
                    android:drawablePadding="@dimen/padding_normal"
                    android:textColor="@color/orange_light"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/orange_light"
                    android:fontFamily="@font/lato"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_container"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:fontFamily="@font/lato"
                android:textAllCaps="false"
                android:background="@drawable/round_corner_button_login"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_below="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/text_forgot_password"
                android:textColor="@color/orange_light"
                android:textSize="16sp"
                android:fontFamily="@font/lato"
                android:textAllCaps="false"
                android:background="@null"/>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>