<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_greyish"
    android:orientation="vertical"
    tools:context=".chatApp.ChatActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_deep"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/avatar_placeholder"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                app:fontFamily="@font/nunito_semibold"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:text="@string/hint_username"/>

        </android.support.v7.widget.Toolbar>

        <!-- Adding a Tab Layout-->
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_deep"
            app:tabSelectedTextColor="@color/white_greyish"
            app:tabIndicatorColor="@color/white_greyish"
            app:tabTextColor="@color/white_greyish">
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- Adding a View Pager-->
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/no_internet_img">
        </ImageView>

        <TextView
            android:id="@+id/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_internet"
            android:layout_below="@+id/no_internet_image"
            android:textSize="18sp"
            android:layout_margin="0dp"
            android:textColor="@color/orange_light"
            app:fontFamily="@font/lato">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_no_internet"
            android:layout_below="@+id/no_internet"
            android:textSize="18sp"
            android:layout_margin="3dp"
            android:textColor="@color/orange_light"
            app:fontFamily="@font/lato">
        </TextView>

    </RelativeLayout>

    <!--<FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_admin"
        android:name="io.icode.concaregh.application.fragments.AdminFragment"
        android:layout_below="@+id/appBarLayout"/>
    -->

</RelativeLayout>